--- a/notebooks/deck_development_guide.ipynb
+++ b/notebooks/deck_development_guide.ipynb
@@ -38,6 +38,23 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
+    "To install PLR from a local repository, run the following from the repository's directory:"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Note that adding \"fw\" will install some required dependencies. A plain \".\" will not.\n",
+    "!pip install .[fw]"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
     "?"
    ]
   },
@@ -816,7 +833,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -931,6 +948,220 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
+    "# Testing out the SilverDeck \n",
+    "\n",
+    "Have fun playing with my aberration."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Example using exported data.\n",
+    "import json\n",
+    "\n",
+    "# 'data/ws_export.json'\n",
+    "ws_export_file = \"/tmp/workspaces.json\"\n",
+    "with open(ws_export_file, \"r\", encoding=\"utf-8\") as f:\n",
+    "  workspaces = json.load(f)\n",
+    "workspace = workspaces[0]\n",
+    "\n",
+    "pt_export_file = \"/tmp/platforms.json\"\n",
+    "with open(pt_export_file, \"r\", encoding=\"utf-8\") as f:\n",
+    "  platforms = json.load(f)\n",
+    "\n",
+    "ct_export_file = \"/tmp/containers.json\"\n",
+    "with open(ct_export_file, \"r\", encoding=\"utf-8\") as f:\n",
+    "  containers = json.load(f)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "from pylabrobot.resources import SilverDeck\n",
+    "\n",
+    "deck = SilverDeck(workspace, platforms, containers)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "deck.children"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "deck.get_all_children()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "from pylabrobot.liquid_handling import LiquidHandler\n",
+    "from pylabrobot.liquid_handling.backends.chatterbox_backend import ChatterBoxBackend\n",
+    "\n",
+    "back = ChatterBoxBackend()\n",
+    "\n",
+    "# TODO: Ask for a better error message when a non-instantiated backend is passed.\n",
+    "lh = LiquidHandler(backend=back, deck=deck)\n",
+    "await lh.setup()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "tiprack = lh.get_resource(\"200ul_tip_rack_MULTITOOL 1\")\n",
+    "\n",
+    "# Check if all tip spots have tips.\n",
+    "all([tipspot.tracker.has_tip for tipspot in tiprack.children])"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "from pylabrobot.resources import set_tip_tracking, set_volume_tracking\n",
+    "\n",
+    "# We enable tip and volume tracking globally using the `set_volume_tracking` and `set_tip_tracking` methods.\n",
+    "set_volume_tracking(enabled=True)\n",
+    "set_tip_tracking(enabled=True)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "try:\n",
+    "  tips = tiprack.get_tips(\"A1:C1\")\n",
+    "  tips\n",
+    "except Exception as e:\n",
+    "  print(e)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "tip_spots = tiprack[\"A1:A3\"]\n",
+    "\n",
+    "# TODO: Ask for a better error message when tips are passed instead of tip spots.\n",
+    "await lh.pick_up_tips(tip_spots)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "plate = lh.get_resource(\"Standard 96-well plate 1\")\n",
+    "\n",
+    "tube_spots = plate[\"A1:C1\"]\n",
+    "\n",
+    "[spot.tracker.has_tube for spot in tube_spots]\n",
+    "#[spot.tracker.has_tube for spot in plate.get_all_items()]\n",
+    "#all([spot.tracker.has_tube for spot in tube_spots])\n",
+    "#len([spot.tracker.has_tube for spot in plate.get_all_items()])"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "tubes = [tube_spot.get_tube() for tube_spot in tube_spots]\n",
+    "\n",
+    "[tube.tracker.liquids for tube in tubes]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "tube = tubes[0]\n",
+    "\n",
+    "tube.tracker.is_disabled"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "try:\n",
+    "  await lh.aspirate(tubes, vols=[100.0, 50.0, 200.0])\n",
+    "except Exception as e:\n",
+    "    print(e)\n",
+    "\n",
+    "[tube.tracker.liquids for tube in tubes]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "await lh.aspirate(tubes, vols=[90.0, 40.0, 9.0])\n",
+    "\n",
+    "[tube.tracker.liquids for tube in tubes]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "await lh.dispense(tubes, vols=[1.0, 1.0, 1.0])\n",
+    "\n",
+    "[tube.tracker.liquids for tube in tubes]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# plate = lh.get_resource(\"plate_01\")\n",
+    "# await lh.aspirate(plate[\"A1:C1\"], vols=[100.0, 50.0, 200.0])\n",
+    "\n",
+    "# await lh.dispense(plate[\"D1:F1\"], vols=[100.0, 50.0, 200.0])"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
     "# Code form PLR notebooks"
    ]
   },
@@ -954,7 +1185,37 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "backend = STAR()\n",
+    "# Basic imports:\n",
+    "# - liquid handler\n",
+    "from pylabrobot.liquid_handling import LiquidHandler\n",
+    "# - backend\n",
+    "from pylabrobot.liquid_handling.backends import STAR\n",
+    "from pylabrobot.liquid_handling.backends.chatterbox_backend import ChatterBoxBackend\n",
+    "# - deck\n",
+    "from pylabrobot.resources.hamilton import STARLetDeck"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "from pylabrobot.resources import set_tip_tracking, set_volume_tracking\n",
+    "\n",
+    "# We enable tip and volume tracking globally using the `set_volume_tracking` and `set_tip_tracking` methods.\n",
+    "set_volume_tracking(enabled=True)\n",
+    "set_tip_tracking(enabled=True)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "backend = ChatterBoxBackend()\n",
+    "# lh = LiquidHandler(backend=backend, deck=STARLetDeck())\n",
     "lh = LiquidHandler(backend=backend, deck=STARLetDeck())"
    ]
   },
@@ -1064,6 +1325,18 @@
    "outputs": [],
    "source": [
     "lh.deck.assign_child_resource(plt_car, rails=15)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "from pylabrobot.resources.liquid import Liquid\n",
+    "\n",
+    "plate = lh.get_resource(\"plate_01\")\n",
+    "plate.set_well_liquids((Liquid.WATER, 300))"
    ]
   },
   {
@@ -1204,7 +1477,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.11.6"
+   "version": "3.12.3"
   }
  },
  "nbformat": 4,
